[gd_scene load_steps=10 format=3 uid="uid://du205tcwcttfr"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_vnw8g"]
[ext_resource type="FontFile" uid="uid://dvgphr601eq8k" path="res://assets/PressStart2P.ttf" id="2_0o3x8"]
[ext_resource type="Theme" uid="uid://djjyjcwvpshfp" path="res://font_themes/new_theme.tres" id="2_1lucm"]
[ext_resource type="Texture2D" uid="uid://x8gy2eu2p8de" path="res://assets/gameover_bg.png" id="2_3vsno"]
[ext_resource type="StyleBox" uid="uid://q3uws5kh1p40" path="res://font_themes/new_style_box_flat.tres" id="3_2oc3i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yj0ls"]
bg_color = Color(0.57375, 0.535901, 0.90602, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
expand_margin_left = 50.0
expand_margin_right = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86ek2"]
bg_color = Color(0.206623, 0.152761, 0.435077, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
expand_margin_left = 50.0
expand_margin_right = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3iiw"]
bg_color = Color(0.57375, 0.535901, 0.90602, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
expand_margin_left = 50.0
expand_margin_right = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3un74"]
bg_color = Color(0.206623, 0.152761, 0.435077, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
expand_margin_left = 50.0
expand_margin_right = 50.0

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_vnw8g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(600, 450)
texture = ExtResource("2_3vsno")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.0
offset_top = 160.0
offset_right = 185.0
offset_bottom = 223.0
grow_horizontal = 2
scale = Vector2(1.23, 1.23)
theme_override_fonts/font = ExtResource("2_0o3x8")
theme_override_font_sizes/font_size = 45
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 281.0
offset_right = 144.0
offset_bottom = 344.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_0o3x8")
theme_override_font_sizes/font_size = 45
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -247.5
offset_top = 376.0
offset_right = 247.5
offset_bottom = 439.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_0o3x8")
theme_override_font_sizes/font_size = 45
text = "High Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgainButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 44.0
offset_right = 250.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1lucm")
theme_override_fonts/font = ExtResource("2_0o3x8")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("3_2oc3i")
theme_override_styles/disabled_mirrored = ExtResource("3_2oc3i")
theme_override_styles/disabled = ExtResource("3_2oc3i")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_2oc3i")
theme_override_styles/hover_pressed = ExtResource("3_2oc3i")
theme_override_styles/hover_mirrored = ExtResource("3_2oc3i")
theme_override_styles/hover = SubResource("StyleBoxFlat_yj0ls")
theme_override_styles/pressed = SubResource("StyleBoxFlat_86ek2")
theme_override_styles/normal = ExtResource("3_2oc3i")
text = "Try again"

[node name="MenuButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -257.0
offset_right = 100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_1lucm")
theme_override_fonts/font = ExtResource("2_0o3x8")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("3_2oc3i")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_2oc3i")
theme_override_styles/hover_pressed = ExtResource("3_2oc3i")
theme_override_styles/hover = SubResource("StyleBoxFlat_o3iiw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3un74")
theme_override_styles/normal = ExtResource("3_2oc3i")
text = "Menu"

[connection signal="pressed" from="Control/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="Control/TryAgainButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/MenuButton" to="." method="_on_quit_button_2_pressed"]
